--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,14 +11,22 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "preinstall": "npx npm-force-resolutions",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
